refactor(资源池): 调整当前项目获取全部资源池方法